--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "sass": "^1.37.5",
     "vanilla-tilt": "^1.7.1",
     "web-vitals": "^1.0.1"
