--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/lab": "^5.0.0-alpha.102",
+    "@mui/material": "^5.10.8",
+    "@mui/x-date-pickers": "^5.0.4",
     "axios": "^0.21.1",
+    "dayjs": "^1.11.5",
+    "jwt-decode": "^3.1.2",
     "markdown-it": "^12.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
